[gd_scene load_steps=14 format=3 uid="uid://cncolafrgfi8y"]

[ext_resource type="Script" path="res://scripts/control.gd" id="1_206od"]
[ext_resource type="Texture2D" uid="uid://bp8e45n6jrsd7" path="res://extra_graphics/logo.png" id="1_dupwk"]
[ext_resource type="Texture2D" uid="uid://bksch4rs4osat" path="res://UI/start button hover1.png" id="2_5jrkg"]
[ext_resource type="Texture2D" uid="uid://cvgr38gydwkim" path="res://UI/start button hover3.png" id="3_w4b5m"]
[ext_resource type="Texture2D" uid="uid://1c30sqpep0qf" path="res://UI/Quit Button1.png" id="4_ifshm"]
[ext_resource type="Texture2D" uid="uid://colyomwk2ebkf" path="res://UI/Quit Button2.png" id="5_f7187"]
[ext_resource type="Texture2D" uid="uid://rqe1k2rqwyck" path="res://UI/controls_button1.png" id="7_r1hio"]
[ext_resource type="Texture2D" uid="uid://cmok3qx1lyf30" path="res://UI/controls_button2.png" id="8_gsrri"]
[ext_resource type="AudioStream" uid="uid://coj1uoa76mwrc" path="res://sfx/click.wav" id="9_kcuto"]

[sub_resource type="Theme" id="Theme_heod6"]

[sub_resource type="Animation" id="Animation_12w54"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_ufust"]
resource_name = "fade_to_black"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k67it"]
_data = {
"RESET": SubResource("Animation_12w54"),
"fade_to_black": SubResource("Animation_ufust")
}

[node name="Control" type="Control"]
layout_mode = 3
anchor_right = 1.005
anchor_bottom = 1.0
offset_top = -2.0
offset_right = 0.400024
offset_bottom = -3.0
script = ExtResource("1_206od")

[node name="icon" type="Sprite2D" parent="."]
position = Vector2(637, 288)
scale = Vector2(4.47352, 4.50586)
texture = ExtResource("1_dupwk")

[node name="buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1332.0
offset_top = 513.0
offset_bottom = -394.0
grow_horizontal = 0
grow_vertical = 2

[node name="StartBtn" type="TextureButton" parent="buttons"]
layout_mode = 2
theme = SubResource("Theme_heod6")
texture_normal = ExtResource("2_5jrkg")
texture_hover = ExtResource("3_w4b5m")

[node name="ControlsButton" type="TextureButton" parent="buttons"]
layout_mode = 2
texture_normal = ExtResource("7_r1hio")
texture_pressed = ExtResource("8_gsrri")
texture_hover = ExtResource("8_gsrri")

[node name="QuitBtn" type="TextureButton" parent="buttons"]
layout_mode = 2
texture_normal = ExtResource("4_ifshm")
texture_hover = ExtResource("5_f7187")

[node name="BlackScreen" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.002
offset_right = -9.0
offset_bottom = -0.158081
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="BlackScreen"]
libraries = {
"": SubResource("AnimationLibrary_k67it")
}

[node name="buttonSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_kcuto")

[connection signal="mouse_entered" from="buttons/StartBtn" to="." method="_on_start_btn_mouse_entered"]
[connection signal="pressed" from="buttons/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="mouse_entered" from="buttons/ControlsButton" to="." method="_on_controls_button_mouse_entered"]
[connection signal="pressed" from="buttons/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="mouse_entered" from="buttons/QuitBtn" to="." method="_on_quit_btn_mouse_entered"]
[connection signal="pressed" from="buttons/QuitBtn" to="." method="_on_quit_btn_pressed"]
